# LLM-debate-champion

environments/debate_arena/: debate_arena.py  pyproject.toml  run_tournament.py
results/: tournament_20260130_155842.json  tournament_20260130_162501.json
